[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/StartLevelTextureButton.gd" type="Script" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]

[node name="StartLevel" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 241.0
margin_bottom = 370.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.5
margin_top = -12.0
margin_right = 33.5
margin_bottom = 12.0
theme = ExtResource( 2 )
text = "Locked"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
